# tachyon

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
src/: codegen.rs  lib.rs  ty.rs
tests/: tests.rs
tests/ui/: abs.rs  abs.stderr  answer_of_life_universe_and_everything.rs  answer_of_life_universe_and_everything.stderr  fibonacci.rs  fibonacci.stderr  nop.rs  nop.stderr  succ.rs  succ.stderr  switch.rs  switch.stderr  tak.rs  tak.stderr
