[package]
name = "tachyon"
version = "0.1.0"
authors = ["Hirochika Matsumoto <git@hkmatsumoto.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm-sys = "140.0.2"

[dev-dependencies]
compiletest_rs = { version = "0.8.0", features = ["tmp", "rustc"] }

[package.metadata.rust-analyzer]
rustc_private = true
